Update the slides

--- a/cours1/index.html
+++ b/cours1/index.html
@@ -97,11 +97,11 @@
   <article data-timings="">
     <h2>Certaines de ces situations peuvent survenir lors de votre carrière professionnelle:</h2>
 
-<p><strong>Situation 1.</strong> Un employeur souhaite que vous réaliser les même analyses 3 ans plus tard sur des données difféntes.</p>
+<p><strong>Situation 1.</strong> Un employeur souhaite que vous réalisez les même analyses 3 ans plus tard sur des données difféntes.</p>
 
-<p><strong>Situation 2.</strong> Vous avez commis une erreur dans votre saisie, vous devez reconduire vos analyses.</p>
+<p><strong>Situation 2.</strong> Vous avez commis une erreur dans votre saisie de données, vous devez reconduire vos analyses.</p>
 
-<p><strong>Situation 3.</strong> Un des réviseurs de votre article scientifique vous demande de refaire vos analyses en tenant compte d&#39;une nouvelle variable environnemnale.</p>
+<p><strong>Situation 3.</strong> Un des réviseurs de votre article scientifique vous demande de refaire vos analyses en tenant compte d&#39;une nouvelle variable environnemental.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -150,7 +150,7 @@
     <h1>Les étapes de travail d&#39;un biologiste</h1>
   </hgroup>
   <article data-timings="">
-    <!-- La slide suivante peut être placer à différents endroits le long du cours. Je pense que présenter le "workflow" d'un biologiste et sans servir au début de chaque cours pour montrer que chaque cours illustre une étape le long de ce "workflow". Ca va permettre aux étudiants de suivre notre cheminement. -->
+    <!-- La slide suivante peut être placé à différents endroits le long du cours. Je pense que présenter le "workflow" d'un biologiste et sans servir au début de chaque cours pour montrer que chaque cours illustre une étape le long de ce "workflow". Ca va permettre aux étudiants de suivre notre cheminement. -->
 
 <h2>Certaines étapes intermédiaires sont souvent oublié.</h2>
 
