Update the slides

--- a/cours1/index.html
+++ b/cours1/index.html
@@ -78,7 +78,7 @@
 <slide class="" id="slide-3" style="background:;">
   <!--   <article data-timings="">
     <div style='text-align:center;'>
-<img src="assets/img/bacon_number.png" height="500px"></img>
+<img src="assets/img/bacon.png" height="500px"></img>
 </div>
 
   </article>
