--- a/cours1/index.html
+++ b/cours1/index.html
@@ -839,7 +839,7 @@ TODO: MISSING FILE bacteries.png
     </div>
     <div class='right' style='float:right;width:60%'>
      <div style='text-align:center;'>
-<img src="assets/img/VM1.png" width="95%"></img>
+<img src="assets/img/vm1.png" width="95%"></img>
 </div>
 
     </div>
@@ -859,7 +859,7 @@ TODO: MISSING FILE bacteries.png
     </div>
     <div class='right' style='float:right;width:60%'>
      <div style='text-align:center;'>
-<img src="assets/img/VM2.png" width="95%"></img>
+<img src="assets/img/vm2.png" width="95%"></img>
 </div>
 
     </div>
@@ -882,7 +882,7 @@ TODO: MISSING FILE bacteries.png
     </div>
     <div class='right' style='float:right;width:60%'>
      <div style='text-align:center;'>
-<img src="assets/img/VM3.png" width="95%"></img>
+<img src="assets/img/vm3.png" width="95%"></img>
 </div>
 
     </div>
