Update the slides

--- a/cours1/index.html
+++ b/cours1/index.html
@@ -304,7 +304,7 @@ TODO: MISSING FILE bacteries.png
     <h1>L&#39;importance de la reproductibilité.</h1>
   </hgroup>
   <article data-timings="">
-    <h2>Certaines de ces situations peuvent survenir lors de votre carrière professionnelle:</h2>
+    <h2>Ces situations peuvent survenir lors de votre carrière professionnelle:</h2>
 
 <p><strong>Situation 1.</strong> Un employeur souhaite que vous réalisiez les mêmes analyses 3 ans plus tard sur des données difféntes.</p>
 
