Update the slides

--- a/cours1/index.html
+++ b/cours1/index.html
@@ -283,7 +283,7 @@ TODO: MISSING FILE bacteries.png
     <h1>Le projet de session</h1>
   </hgroup>
   <article data-timings="">
-    <p>Est-ce que le réseau de collaboration entre les étudiants du bac en écologie a les mêmes propriétés que les réseaux écologiques ?</p>
+    <p>Est-ce que le réseau de collaborations entre les étudiants du bacc en écologie a les mêmes propriétés que les réseaux écologiques ?</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -306,7 +306,7 @@ TODO: MISSING FILE bacteries.png
   <article data-timings="">
     <h2>Ces situations peuvent survenir lors de votre carrière professionnelle:</h2>
 
-<p><strong>Situation 1.</strong> Un employeur souhaite que vous réalisiez les mêmes analyses 3 ans plus tard sur des données difféntes.</p>
+<p><strong>Situation 1.</strong> Un employeur souhaite que vous réalisiez les mêmes analyses 3 ans plus tard sur des données différentes.</p>
 
 <p><strong>Situation 2.</strong> Vous avez commis une erreur dans votre saisie de données, vous devez reconduire vos analyses.</p>
 
@@ -472,7 +472,7 @@ TODO: MISSING FILE bacteries.png
     <h1>Approche</h1>
   </hgroup>
   <article data-timings="">
-    <p>Les cours vont comprendre une période de présentation entrecoupée d&#39;exercices, suivi d&#39;une discussion générale sur des références clés (45).</p>
+    <p>Les cours vont comprendre une période de présentation entrecoupée d&#39;exercices, suivi d&#39;une discussion générale sur des références clés.</p>
 
 <p>Nous progresserons dans l&#39;exécution du travail de session et l&#39;évaluation portera sur les étapes intermédiaires.</p>
 
