Update the slides

--- a/cours2/index.html
+++ b/cours2/index.html
@@ -248,7 +248,7 @@
 
 <table><thead>
 <tr>
-<th align="left">ids</th>
+<th align="left">ID</th>
 <th align="left">esp</th>
 <th align="right">2010</th>
 <th align="right">2011</th>
@@ -474,50 +474,38 @@
     <div class='left' style='float:left;width:48%'>
      <table><thead>
 <tr>
-<th align="left">ID_plot</th>
-<th align="right">ID_arbre</th>
-<th align="right">ID_multi</th>
+<th align="left">ID_arbre</th>
 <th align="left">esp</th>
 <th align="right">annees</th>
 <th align="right">dhp_mm</th>
 </tr>
 </thead><tbody>
 <tr>
-<td align="left">A</td>
-<td align="right">567</td>
-<td align="right">1</td>
+<td align="left">567-1</td>
 <td align="left">acsa</td>
 <td align="right">2010</td>
 <td align="right">460</td>
 </tr>
 <tr>
-<td align="left">A</td>
-<td align="right">567</td>
-<td align="right">2</td>
+<td align="left">567-2</td>
 <td align="left">acsa</td>
 <td align="right">2010</td>
 <td align="right">100</td>
 </tr>
 <tr>
-<td align="left">A</td>
-<td align="right">567</td>
-<td align="right">3</td>
+<td align="left">567-3</td>
 <td align="left">acsa</td>
 <td align="right">2010</td>
 <td align="right">120</td>
 </tr>
 <tr>
-<td align="left">B</td>
-<td align="right">598</td>
-<td align="right">NA</td>
+<td align="left">598</td>
 <td align="left">piru</td>
 <td align="right">2011</td>
 <td align="right">380</td>
 </tr>
 <tr>
-<td align="left">B</td>
-<td align="right">876</td>
-<td align="right">NA</td>
+<td align="left">876</td>
 <td align="left">abba</td>
 <td align="right">2014</td>
 <td align="right">160</td>
@@ -532,7 +520,7 @@
     <div class='right' style='float:right;width:48%'>
      <table><thead>
 <tr>
-<th align="left">ID</th>
+<th align="left">ID_arbre</th>
 <th align="left">ID_multi</th>
 <th align="left">esp</th>
 <th align="right">annees</th>
