Update the slides

--- a/cours3/index.html
+++ b/cours3/index.html
@@ -155,6 +155,8 @@
 <li>Séparer les données brutes des données destinées aux analyses.</li>
 <li>Rendre flexible la préparation des données pour les analyses.</li>
 <li>Pemettre le travail simultané de plusieurs utilisateurs grâce à l&#39;approche client-serveur.</li>
+<li>Déclencher des procédures de sauvegardes.</li>
+<li>Suivre les modifications/ajouts à la BD (journal de transactions).</li>
 </ul>
 
   </article>
