--- a/cours2/index.html
+++ b/cours2/index.html
@@ -1077,19 +1077,48 @@ Sommes-nous capables de juger de la valeur de ces données? -->
 <slide class="" id="slide-40" style="background:;">
   <!--  <a href="#slide-40"></a> -->
   <hgroup>
-    <h1>Lectures et travail pour la semaine prochaine</h1>
+    <h1>Lectures et travail pour la semaine prochiane</h1>
   </hgroup>
   <article data-timings="">
     <h2>Travail</h2>
 
 <p>Maintenant que vous en savez plus sur le format des données et sur les règles de saisie, élaborez votre formulaire et commencez la récolte. Vous devez collecter les données pour le début de la séance de la semaine prochaine.</p>
 
-<h2>Lectures</h2>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+<slide class="" id="slide-41" style="background:;">
+  <!--  <a href="#slide-41"></a> -->
+  <hgroup>
+    <h1>Lectures et travail pour la semaine prochaine</h1>
+  </hgroup>
+  <article data-timings="">
+    <h2>Travail</h2>
 
 <ul>
 <li>Pereira, H.M. 2016. A latitudinal gradient for genetic diversity. Science 353: 1494-1495.</li>
 <li>Miraldo et al. 2016. An Anthropocene map of genetic diversity. Science 353: 1532-1535.</li>
 </ul>
+
+<p>&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD</p>
+
+<h1></h1>
+
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<blockquote>
+<p>19b26bfbbf6ca562aaccbd842d7238ba59328029</p>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
+</blockquote>
 
 <!-- TRANSTION vers SQL
 
@@ -1342,8 +1371,14 @@ Comme nous le verrons plus tard cette multidimensionnalité complique notre tâc
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=40 title='Lectures et travail pour la semaine prochaine'>
+        data-slide=40 title='Lectures et travail pour la semaine prochiane'>
          40
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=41 title='Lectures et travail pour la semaine prochaine'>
+         41
       </a>
     </li>
   </ul>
