Update the slides

--- a/cours3/index.html
+++ b/cours3/index.html
@@ -820,7 +820,7 @@
 <li>Créer la base de données</li>
 <li>Créer les tables et spécifier les clés</li>
 <li>Ajouter de l&#39;information dans les tables</li>
-<li>Faire des requêtes pour extraire l&#39;information </li>
+<li>Faire des requêtes pour extraire l&#39;information</li>
 </ol>
 
   </article>
@@ -962,7 +962,7 @@ con &lt;- dbConnect(PostgreSQL(), host=&quot;localhost&quot;,
      <ul>
 <li><code>films</code> est le nom de la table</li>
 <li>Chaque attribut de la table (<code>code</code>,<code>titre</code> etc) dispose d&#39;un type de données (<code>char(5)</code>, <code>varchar(40)</code> etc)</li>
-<li>La dernière ligne correspond aux contraintes de la table telle que la clé primaire. Cette contrainte est nommée <code>pkey_films</code></li>
+<li>La dernière ligne correspond aux contraintes de la table telle que la clé primaire.</li>
 <li><strong>Question:</strong> Cette clé primaire est composite ou simple?</li>
 </ul>
 
