Update the slides

--- a/cours3/index.html
+++ b/cours3/index.html
@@ -393,10 +393,11 @@
 
 <ul>
 <li><strong>pgadmin3</strong>: logiciel avec une interface graphique.</li>
-<li><strong>R</strong>: language de programmation scientifique.
-&lt;!-- - <strong>psql</strong>: un autre language utile (si le temps le permet). --&gt;</li>
+<li><strong>R</strong>: language de programmation scientifique.</li>
 </ul></li>
 </ul>
+
+<!-- - **psql**: un autre language utile (si le temps le permet). -->
 
 <!-- Question, qu'est qui distingue un logiciel d'un langage? -->
 
